# falconry

./: CONTRIBUTING.md  LICENSE  README.md  example.py  mypy.ini  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: publish-to-test-pypi.yml  python-package.yml
docs/: conf.py  index.rst
docs/usage/: executable.rst  install.rst  job.rst  manager.rst  quickstart.rst
src/falconry/: __init__.py  __main__.py  cli.py  job.py  lock.py  manager.py  mychdir.py  postpone_signal.py  quick_job.py  run_simple.sh  schedd_wrapper.py  translate.py  utils.py
src/pmux/: __main__.py
tests/: test_cli.py  test_job.py  test_lock.py  test_mychdir.py  test_utils.py
tests/MockHTCondor/: htcondor_mock.py
