[metadata]
name = falconry
version = 0.1.0
author = Filip Nechansky
description = job manager and interface for htcondor
#long_description = file: README.md
#long_description_content_type = text/markdown
#url =
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics

[options]
packages = find:
package_dir = =src
python_requires = >=3.6
install_requires =
    htcondor
    ijson

[flake8]
max-complexity = 12
max-line-length = 127
count = True
statistics = True
import-order-style = google
exclude = docs/conf.py

[mypy]
files = src/falconry

[mypy-ijson.*]
ignore_missing_imports = True

[mypy-htcondor]
ignore_missing_imports = True
